--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -8,6 +8,9 @@
 
 
   /* Headings */
+  .base-content {
+    @apply text-brand-green-900 antialiased;
+  }
 
   .base-content h1 {
     @apply my-3 text-4xl font-bold;
@@ -35,7 +38,7 @@
 
   /* Paragraphs */
   .base-content p {
-    @apply my-8 text-lg;
+    @apply my-8 text-xl font-normal;
   }
 
   /* Anchors */
